--- a/JAVA/EE/SpringBoot/spring_mvc_controller_demo/pom.xml
+++ b/JAVA/EE/SpringBoot/spring_mvc_controller_demo/pom.xml
@@ -35,6 +35,17 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>custom.springboot.starter</groupId>
+            <artifactId>log-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
