--- a/JAVA/EE/Lucene/lucene-quickstart/pom.xml
+++ b/JAVA/EE/Lucene/lucene-quickstart/pom.xml
@@ -9,16 +9,19 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
             <version>4.10.4</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-analyzers-common</artifactId>
             <version>4.10.4</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queryparser</artifactId>
@@ -30,11 +33,25 @@
             <artifactId>junit</artifactId>
             <version>4.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.wltea.ik-analyzer</groupId>
+            <artifactId>ik-analyzer</artifactId>
+            <version>3.2.8</version>
+        </dependency>
+
         <dependency>
             <groupId>com.thihy</groupId>
             <artifactId>elasticsearch-analysis-paoding</artifactId>
             <version>1.4.2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -49,4 +66,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
