--- a/JAVA/EE/SpringCloud/MySpringCloud/microservicecloud-provider-dept-8001/src/main/resources/application.yml
+++ b/JAVA/EE/SpringCloud/MySpringCloud/microservicecloud-provider-dept-8001/src/main/resources/application.yml
@@ -33,7 +33,7 @@ eureka:
     prefer-ip-address: true   # 访问路径可以显示IP地址
 
 info:
-  app.name: luokangyuan-microservicecloud
+  app.name: my-microservicecloud-8001
   company.name: www.xuzhijiang.com
-  build.artifactId: $project.artifactId$
-  build.version: $project.version$
+  build.artifactId: ${project.artifactId}
+  build.version: ${project.version}
