--- a/JAVA/EE/SpringCloud/MySpringCloud/microservicecloud-provider-dept-8003/src/main/resources/application.yml
+++ b/JAVA/EE/SpringCloud/MySpringCloud/microservicecloud-provider-dept-8003/src/main/resources/application.yml
@@ -27,11 +27,11 @@ eureka:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
   instance:
-    instance-id: my-microservicecloud-dept8001-instance-id
+    instance-id: my-microservicecloud-dept8003-instance-id
     prefer-ip-address: true
 
 info:
-  app.name: luokangyuan-microservicecloud
+  app.name: my-microservicecloud-8003
   company.name: www.xuzhijiang.com
-  build.artifactId: $project.artifactId$
-  build.version: $project.version$
+  build.artifactId: ${project.artifactId}
+  build.version: ${project.version}
