--- a/JAVA/EE/Spring/SpringJDBCExample/pom.xml
+++ b/JAVA/EE/Spring/SpringJDBCExample/pom.xml
@@ -5,30 +5,15 @@
 	<artifactId>SpringJDBCExample</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<!--  
-		首先，我们需要在maven项目pom.xml文件中包含Spring JDBC和Database驱动程序。
-		
-		大多数部分是由STS自动生成的
-
-		我们还添加了所需的artifacts spring-jdbc和mysql-connector-java。 
-		第一个包含Spring JDBC支持类，第二个包含数据库驱动程序。 
-		我正在使用MySQL数据库进行测试，因此我添加了MySQL JConnector jar依赖项。
-		 如果您正在使用其他一些RDBMS，那么您应该在依赖项中进行相应的更改。
-	-->
 	<properties>
-
 		<!-- Generic properties -->
-		<java.version>1.6</java.version>
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
 		<!-- Spring -->
 		<spring-framework.version>4.0.2.RELEASE</spring-framework.version>
-
 		<!-- Logging -->
 		<logback.version>1.0.13</logback.version>
 		<slf4j.version>1.7.5</slf4j.version>
-
 	</properties>
 
 	<dependencies>
@@ -37,18 +22,42 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring-framework.version}</version>
+            <scope>provided</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-framework.version}</version>
+            <scope>test</scope>
+        </dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.6</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.3.2</version>
+            <scope>test</scope>
+        </dependency>
+
 		<!-- Spring JDBC Support -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>${spring-framework.version}</version>
+            <scope>provided</scope>
 		</dependency>
 		
 		<!-- MySQL Driver -->
@@ -65,6 +74,7 @@
 			<version>${slf4j.version}</version>
 			<scope>compile</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -72,5 +82,20 @@
 			<scope>runtime</scope>
 		</dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
