--- a/JAVA/EE/SpringBoot/SpringBootTutorialSeries/aop-springboot/pom.xml
+++ b/JAVA/EE/SpringBoot/SpringBootTutorialSeries/aop-springboot/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.didispace</groupId>
-	<artifactId>Chapter4-2-4</artifactId>
+	<groupId>com.springboot.core</groupId>
+	<artifactId>aop-springboot</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
