--- a/DataStructure-Algorithm/simple-algorithm-impl/pom.xml
+++ b/DataStructure-Algorithm/simple-algorithm-impl/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.java.algorithm</groupId>
   <artifactId>DataStructure-Algorithm</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>2.0</version>
   <name>DataStructure-Algorithm</name>
 
     <properties>
