--- a/JAVA/EE/MessageQueue/Kafka/quick-start/pom.xml
+++ b/JAVA/EE/MessageQueue/Kafka/quick-start/pom.xml
@@ -29,6 +29,13 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.11</version>
+        </dependency>
+
     </dependencies>
 
 </project>
