--- a/JAVA/EE/MessageQueue/Kafka/quick-start/pom.xml
+++ b/JAVA/EE/MessageQueue/Kafka/quick-start/pom.xml
@@ -8,16 +8,27 @@
     <artifactId>quick-start</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <!-- 指定源码编码方式UTF-8 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- 指定源码/class为1.8 -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- 指定虚拟机为Java 1.8 -->
+        <java.version>1.8</java.version>
+    </properties>
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+        <!-- 新的Java编写的Kafka客户端依赖 -->
         <dependency>
             <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-clients</artifactId>
-            <version>2.0.0</version>
+            <artifactId>kafka_2.12</artifactId>
+            <version>2.2.0</version>
         </dependency>
 
-        <!-- 由于新版的客户端没有引入日志框架实现的依赖，所以我们要自己引入 -->
+
+        <!-- 由于新版的Java编写的Kafka客户端没有引入日志框架实现的依赖，所以我们要自己引入 -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
