--- a/JAVA/EE/MyBatis/MyBatisLearn/pom.xml
+++ b/JAVA/EE/MyBatis/MyBatisLearn/pom.xml
@@ -8,9 +8,7 @@
     <artifactId>MyBatisLearn</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
     <name>MyBatisLearn</name>
-    <description>Mybatis demo project</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,7 +17,6 @@
     </properties>
 
     <dependencies>
-
         <!--我们将通过MyBatis访问MySQL数据库-->
         <dependency>
             <groupId>mysql</groupId>
@@ -27,21 +24,18 @@
             <version>5.1.40</version>
             <scope>runtime</scope>
         </dependency>
-
         <!-- mybatis依赖 -->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.4.6</version>
         </dependency>
-
-        <!--mybatis-spring(用于和spring整合)-->
+        <!--mybatis-spring(用于和spring整合),注意在Spring Boot中直接用mybatis start即可.-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.3.0</version>
         </dependency>
-
     </dependencies>
 
     <build>
