--- a/JAVA/EE/MyBatis/QuickStart/pom.xml
+++ b/JAVA/EE/MyBatis/QuickStart/pom.xml
@@ -10,7 +10,6 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>QuickStart</name>
-    <description>Mybatis demo project</description>
 
     <properties>
         <!-- 指定源码的编译方式为UTF-8 -->
@@ -23,8 +22,7 @@
     </properties>
 
     <dependencies>
-
-        <!--我们将通过MyBatis访问MySQL数据库-->
+        <!--MySQL数据库驱动依赖-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -37,6 +35,10 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.6</version>
         </dependency>
+
+        <!-- 在基础篇开篇中，我们提到过mybatis在工作过程中，依赖数据源(DataSource)，
+             由于mybatis自带了几个简单的DataSource实现，这里我们直接使用mybatis自带的即可，
+            不需要引入其他数据源的依赖。 -->
 
         <!--其中slf4j和slf4j-log4j12是用于桥接用的，可以不引入。
         但是如果想用log4j作为日志框架，且项目中依赖了slf4j，就一定要引入slf4j-log4j12。-->
@@ -60,7 +62,6 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.25</version>
         </dependency>
-
 
         <!-- juint测试框架 -->
         <dependency>
