--- a/JAVA/EE/Dubbo/dubbo-hello-world/03_dubbo-consumer/pom.xml
+++ b/JAVA/EE/Dubbo/dubbo-hello-world/03_dubbo-consumer/pom.xml
@@ -40,7 +40,7 @@
         <!--引入接口项目jar包-->
         <dependency>
             <groupId>org.dubbo.core</groupId>
-            <artifactId>hello-world</artifactId>
+            <artifactId>dubbo-hello-world-api</artifactId>
             <version>1.0.1</version>
         </dependency>
 
