--- a/JAVA/EE/SpringCloud/spring-cloud-alibaba/hello-spring-cloud-alibaba-nacos-provider-8081/pom.xml
+++ b/JAVA/EE/SpringCloud/spring-cloud-alibaba/hello-spring-cloud-alibaba-nacos-provider-8081/pom.xml
@@ -41,6 +41,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
+        <!--Nacos Config 客户端的使用依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
         <!-- Spring Cloud End -->
     </dependencies>
 
