--- a/JAVA/AndroidCommonTech/build.gradle
+++ b/JAVA/AndroidCommonTech/build.gradle
@@ -1,13 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-// 用于设置驱动构建过程的代码
+// 整个AndroidCommonTech项目构建脚本配置
 buildscript {
-
-    // 远程仓库
-    // 这里依赖的远程仓库是google和jcenter
+    // 远程仓库配置
     repositories {
+        // 这里依赖的远程仓库是google和jcenter
         google()
         jcenter()
+        // 配置私有的maven仓库，在私有的maven仓库中寻找公司私有的jar包
+//        maven {
+//            url"http://host:port/path"
+//        }
     }
     // 声明了使用Android Studio gradle插件版本。
     dependencies {
@@ -23,6 +26,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        // 配置私有的maven仓库
+//        maven {
+//            url"http://host:port/path"
+//        }
     }
 }
 
