--- a/JAVA/EE/Netty/NettyQuickStart/pom.xml
+++ b/JAVA/EE/Netty/NettyQuickStart/pom.xml
@@ -24,5 +24,12 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.22.Final</version>
         </dependency>
+
+        <!--在Netty中使用ProtocolBuf需要引入的依赖-->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 </project>
