--- a/JAVA/core/pom.xml
+++ b/JAVA/core/pom.xml
@@ -76,6 +76,11 @@
 			<version>3.2.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>22.0</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
