--- a/JAVA/EE/SpringBoot/data-jpa/pom.xml
+++ b/JAVA/EE/SpringBoot/data-jpa/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.2.RELEASE</version>
+		<version>2.0.4.RELEASE</version>
 	</parent>
 
 	<!-- App相关信息 -->
@@ -47,8 +47,9 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.6.1</version>
 		</dependency>
-		<!-- 引入Spring Data Jpa，Spring-data-jpa依赖于Hibernate -->
-		<dependency>
+		<!-- 引入Spring Data Jpa-->
+        <!--data-jpa的依赖内部内部包含了hibernate依赖,说明Spring Data JPA的具体实现还是hibernate-->
+        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -79,4 +80,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
