--- a/JAVA/EE/SpringBoot/springboot-jpa-demo/pom.xml
+++ b/JAVA/EE/SpringBoot/springboot-jpa-demo/pom.xml
@@ -25,19 +25,15 @@
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
-        <!--配置MySQL的依赖(如果要访问MySQL数据库，需要加入对MySQL的项目依赖)-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
             <scope>runtime</scope>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
