--- a/JAVA/EE/SpringBoot/Quartz/pom.xml
+++ b/JAVA/EE/SpringBoot/Quartz/pom.xml
@@ -9,17 +9,25 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+        <!--定时任务-->
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-
-        <!--slf4j依赖-->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
+            <version>2.1.5</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
