--- a/JAVA/EE/SpringCloud/spring-cloud-netflix/hello-spring-cloud-web-admin-ribbon-8764/src/main/resources/application.yml
+++ b/JAVA/EE/SpringCloud/spring-cloud-netflix/hello-spring-cloud-web-admin-ribbon-8764/src/main/resources/application.yml
@@ -14,4 +14,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/ # 把当前服务注册eureka服务端(这个地址就是eureka的地址)
