--- a/JAVA/EE/SpringCloud/spring-cloud-netflix/hello-spring-cloud-config-8888/src/main/resources/application.yml
+++ b/JAVA/EE/SpringCloud/spring-cloud-netflix/hello-spring-cloud-config-8888/src/main/resources/application.yml
@@ -3,23 +3,25 @@ spring:
     name: hello-spring-cloud-config
   cloud:
     config:
-      label: master
+      label: master # 获取的是uri对应的仓库的master分支中的配置文件.
       server:
         git:
-          uri: https://github.com/xuzhijiang/spring-cloud-config
-          search-paths: respo
-          username: your username
-          password: your pwd
+          uri: https://github.com/xuzhijiang/Note # 配置文件的仓库地址
+          # 配置文件放在uri对应的仓库的JAVA/EE/SpringCloud/spring-cloud-config-repos/spring-cloud-netflix/config-client目录下
+          search-paths: JAVA/EE/SpringCloud/spring-cloud-config-repos/spring-cloud-netflix/config-client
+          username: xuzhijiang
+          password: xuzhijiang@12345
 
 server:
   port: 8888
+# 配置服务器的默认端口为 8888，如果修改了默认端口，则客户端项目就不能在 application.yml 或 application.properties
+# 中配置 spring.cloud.config.uri，必须在 bootstrap.yml 或是 bootstrap.properties 中配置，
+# 原因是 bootstrap 开头的配置文件会被优先加载和配置，切记。
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
-
-# 相关配置说明，如下：
 
 #spring.cloud.config.label：配置仓库的分支
 #spring.cloud.config.server.git.uri：配置 Git 仓库地址（GitHub、GitLab、码云 ...）
@@ -28,5 +30,4 @@ eureka:
 #spring.cloud.config.server.git.password：访问 Git 仓库的密码
 
 #注意事项：
-#
 #如果使用 GitLab 作为仓库的话，git.uri 需要在结尾加上 .git，GitHub 则不用
