--- a/JAVA/EE/SpringCloud/spring-cloud-netflix/hello-spring-cloud-eureka/pom.xml
+++ b/JAVA/EE/SpringCloud/spring-cloud-netflix/hello-spring-cloud-eureka/pom.xml
@@ -2,16 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!-- 服务注册与发现 -->
+    <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>hello-spring-cloud-dependencies</artifactId>
         <groupId>com.funtl</groupId>
+        <artifactId>hello-spring-cloud-dependencies</artifactId>
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../hello-spring-cloud-dependencies/pom.xml</relativePath>
     </parent>
-
-    <!-- 服务注册与发现 -->
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hello-spring-cloud-eureka</artifactId>
     <packaging>jar</packaging>
@@ -43,6 +42,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!--  指向应用程序的入口 -->
+                <!--  之前执行springboot的时候直接右键run即可,但现在是一个jar文件,所以要提供一个入口类. -->
+                <!--  之后运行java -jar命令才有作用,否则java -jar找不到入口. -->
                 <configuration>
                     <mainClass>com.funtl.hello.spring.cloud.eureka.EurekaApplication</mainClass>
                 </configuration>
