--- a/JAVA/EE/Dubbo/apache-dubbo-rpc/hello-dubbo-service-user-consumer/src/main/resources/application.yml
+++ b/JAVA/EE/Dubbo/apache-dubbo-rpc/hello-dubbo-service-user-consumer/src/main/resources/application.yml
@@ -27,10 +27,9 @@ dubbo:
   registry:
     id: zookeeper
     # address: zookeeper://192.168.10.131:2181?backup=192.168.10.131:2182,192.168.10.131:2183
-    address: zookeeper://ip:2181
-  # consumer端负载均衡配置
+    address: zookeeper://94.191.29.122:2181
   consumer:
-    loadbalance: roundrobin
+    loadbalance: roundrobin # consumer端负载均衡配置
 
 # Dubbo Endpoint (default status is disable)
 endpoints:
