--- a/JAVA/EE/SpringCloud/spring-cloud-alibaba/hello-spring-cloud-alibaba-dependencies/pom.xml
+++ b/JAVA/EE/SpringCloud/spring-cloud-alibaba/hello-spring-cloud-alibaba-dependencies/pom.xml
@@ -59,7 +59,7 @@
             <!--
                     spring-cloud-alibaba-dependencies最新版本是 0.2.1.RELEASE 和 0.1.1.RELEASE，
                     0.2.1.RELEASE 对应的是 Spring Cloud Finchley 版本，
-                    版本 0.1.1.RELEASE 对应的是 Spring Cloud Edgware 版本。
+                    0.1.1.RELEASE 对应的是 Spring Cloud Edgware 版本。
             -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
