--- a/JAVA/EE/SpringBoot/data-jdbc/pom.xml
+++ b/JAVA/EE/SpringBoot/data-jdbc/pom.xml
@@ -14,7 +14,7 @@
 	<artifactId>data-jdbc</artifactId>
 	<packaging>jar</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Spring Boot Data Jdbc App</name>
+	<name>spring-jdbc</name>
 
 	<properties>
 		<!-- 指定源码编码方式UTF-8 -->
@@ -29,7 +29,6 @@
 	</properties>
 
 	<dependencies>
-		<!-- 依赖spring-boot-starter-web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -42,7 +41,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		<!-- 使用Swagger调试API -->
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
