--- a/JAVA/EE/SpringBoot/spring-annotation-based-webmvc/pom.xml
+++ b/JAVA/EE/SpringBoot/spring-annotation-based-webmvc/pom.xml
@@ -15,7 +15,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring.security.version>4.0.2.RELEASE</spring.security.version>
         <java.version>1.8</java.version>
+        <jsp.api.version>2.2</jsp.api.version>
+        <jstl.version>1.2</jstl.version>
     </properties>
 
     <dependencies>
@@ -29,22 +32,60 @@
             <artifactId>spring-web</artifactId>
             <version>5.0.10.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>${jsp.api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
+        <finalName>spring-annotation-based-webmvc</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.1</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+
+
+<!--  Failed to execute goal org.apache.maven.plugins:maven-war-plugin:2.2:war (default-war)
+on project spring-webmvc-core: Error assembling WAR: webxml attribute is required
+(or pre-existing WEB-INF/web.xml if executing in update mode)
+-->
+            <!--we are not using web.xml file right.由于它是一个Web应用程序，
+			Maven搜索web.xml文件,如果在应用程序中没有找不到，则会引发一些错误。 这是为了避免Maven相关问题，我们需要在pom.xml文件中配置“<failOnMissingWebXml>”标志-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
         </plugins>
